--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1,3 +1,8 @@
+on init
+    # Allow system to toggle DC Dimming
+    chown system system /sys/class/drm/card0-DSI-1/dimlayer_bl_en
+    chmod 0660 /sys/class/drm/card0-DSI-1/dimlayer_bl_en
+
 on post-fs
     # Vibration
     chown system system /sys/devices/platform/soc/c440000.qcom,spmi/spmi-0/spmi0-03/c440000.qcom,spmi:qcom,pmi8998@3:qcom,haptics@c000/leds/vibrator/vmax_override
@@ -15,6 +20,8 @@ on boot
 
     # OTG
     write /sys/class/power_supply/usb/otg_switch 1
+
+    # DC Dimming
     chmod 0660 /sys/devices/platform/soc/ae00000.qcom,mdss_mdp/drm/card0/card0-DSI-1/dimlayer_bl_en
     chown system system /sys/devices/platform/soc/ae00000.qcom,mdss_mdp/drm/card0/card0-DSI-1/dimlayer_bl_en
 
